Refined project documentation structure further into high level chapter headings and subsections

--- a/ProjectReport&Documentation/Scheduler Project Report.tex
+++ b/ProjectReport&Documentation/Scheduler Project Report.tex
@@ -80,51 +80,85 @@ Higher Diploma in Computing
 % 	The Symfony Framework [and alternatives]
 %----------------------------------------
 
+\section {Initiation}
 
+% High level concept description
+
+\section {Concept Development}
+
+
+\subsection {Overview of Project Scope}
+\subsection {Feasibility Review}
+Review of open source and commercial applications in similar functionality sphereRequirements specification
+
+\section {Planning Phase}
+
+\subsection {Project Management}
+\subsection {Risk Management}
+\subsection {Communication Management}
+\subsection {Stakeholder Management}
 \section {Requirements Analysis}
 
-%----------------------------------------------------------------------------------------
-%	Review of open source and commercial applications in similar functionality sphereRequirements specification
-%       Chapter 4: 	System Requirements and Specification
-\iffalse
-%Requirements Specification (Analysis)
-Description / Usage:  The requirements specification lays out the detailed functional requirements for an application so that an
-accurate depiction of the system is made in a way that holds both DAS-ITE and the customer accountable for the functionality
-that must be delivered.  This document is also used to start building a test plan and, possibly, test scripts.
-Criteria for Usage: Required for all projects
-Example: TBD
-%High Level Use Case Specification (Analysis)
-Description / Usage:  The high-level use case specification aims to identify all the actors who will use a system and what
+\subsection {Functional Requirements Specification}
+
+The requirements specification lays out the detailed functional requirements for an application so that an
+accurate depiction of the system is made in a way that holds both the IT project lead and the customer accountable for the functionality that must be delivered.  This document is also used to start building a test plan and, possibly, test scripts.
+
+\subsection {Use case specification}
+The high-level use case specification aims to identify all the actors who will use a system and what
 actions they can take in that system.
-Criteria for Usage: Required for all projects.
-Example: TBD
-%Detailed Use Cases (Analysis)
-Description / Usage:  The detailed use case document takes all identified use cases and establish when what triggers the
-beginning of the use case, what the interaction is during the use case, and what action ends the use case.  This simply takes what
-was developed by the high-level use cases and establishes more detail.
-Criteria for Usage: Optional.  Detailed use cases make sense on high profile projects or for situations where a use case is
-quite complicated.
-Example: TBD
-%High Level Design (Analysis)
-Description / Usage:  The high-level design takes into consideration all the information provided by the preceding documents
+
+\subsection {Detailed Use Case Analysis}
+The detailed use case document takes all identified use cases and establish when what triggers the
+beginning of the us case, what the interaction is during the use case, and what action ends the use case.  This simply takes what
+was developed by the high-level use cases and establishes more detail
+
+\section {Design Specification}
+\subsection {System Design Document}
+
+The high-level design takes into consideration all the information provided by the preceding documents
 and attempts to lay out an initial design.  This design identifies any design constraints, establishes a basic architecture as well as
 the solution design which consists of any data models, data flow diagrams, application flow and initial screen mock-ups.
-Criteria for Usage: Required for all projects.
-Example: TBD
-%Test Plan (Analysis, Design)
-Description / Usage:  The test plan outlines how an application will be tested. The most substantial portions of the test plan
-come from the requirements specification developed during the analysis phase.  However, during the design phase, additional
-testing needs may surface.
-Criteria for Usage: Required for every project
-Example: TBD
-%Test Script (Design, Construction)
-Description / Usage:  The test script outlines the exact steps for performing a test.  This document tracks who is doing the
-testing, what is being tested, how to set up testing, how to execute the test and whether or not the tests were successful or not.
-Criteria for Usage: Optional
-Example: TBD
-\fi
-%----------------------------------------
+
 % Design artefacts- diagram of project structure UML, Database tables, Use cases
 % Development includes how the project was developed from coding to database tables etc
 % Implementation project plan, GANNT chart, dependencies, project diary as appendix [readme on Github commits?]
+
+
+
+\section {Design Specification}
+\subsection {Software Development Document}
+
+The high-level design takes into consideration all the information provided by the preceding documents
+and attempts to lay out an initial design.  This design identifies any design constraints, establishes a basic architecture as well as
+the solution design which consists of any data models, data flow diagrams, application flow and initial screen mock-ups.
+\subsection {Test Analysis Report}
+
+\section {Testing Specification}
+\subsection {Testing Approaches Used}
+\subsection {Test Problem report}
+
+\section {Implementation}
+\subsection {Implementation Plan}
+
+\section {Evaluation}
+\subsection {User Feedback}
+\subsection {Further Enhancements}
+
+\section {Conclusions}
+\subsection {Review of material covered }
+\subsection {Further Development Opportunities}
+\subsection {Outstanding Issues/Continuous Improvement Plan}
+
+\section {Appendices}
+\subsection {Code Listing}
+
+\subsubsection {Database creation scripts}
+\subsubsection {Entity Classes}
+\subsubsection {Mapping Extension Classes}
+\subsubsection {Repository Classes}
+\subsubsection {Form Type}
+\subsubsection {Controller Classes}
+\subsubsection {Twig Templates}
+\subsubsection {List of Vendor tools used}
 \end{document}
