Work on abstract and introduction

--- a/ProjectReport&Documentation/Scheduler Project Report.tex
+++ b/ProjectReport&Documentation/Scheduler Project Report.tex
@@ -1,6 +1,7 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper,12pt]{article}
 
 \usepackage{graphicx}	
+\usepackage{csquotes}
 \begin{document}
 \begin{titlepage}
 
@@ -12,10 +13,11 @@
 \date{April 2017}
 
 \maketitle
-\HRule \\[0.4cm]
+
 \thispagestyle{empty}
 
 \begin{center}
+\HRule \\[0.4cm]
 \textsc{\large Submitted in part fulfilment
  \\for the degree of
 Higher Diploma in Computing
@@ -56,12 +58,40 @@ Higher Diploma in Computing
 %----------------------------------------------------------------------------------------
 \section*{Abstract}
 
+This project is concerned with requirements gathering, planning and delivery of a prototype rostering and scheduling software project for Irish Wheelchair Association (IWA), a large non profit service provider which needs a new organisation wide application to manage the planning of personal care delivery for people with disabilities. This project begins by examining the body of current academic research in software delivery to provide a brief synthesis of best practice in the planning, implementation and deployment of modern software applications.
+
+Based on this research, this author selects the Systems Development Life Cycle (SDLC) methodology as an appropriate toolset to determine the requirements of IWA for a new rostering and scheduling solution which the organisation plans to deploy to its 1,500 Personal Assistants. Having gathered the requirements, the project progresses to define the organisational context for the software deployment.
+
+Using the SDLC methodology the author, who is responsible for leading the Information Technology function at IWA, works collaboratively with key project stakeholders across the organisation to define a broad functional requirement specification and produces various key design artefacts.
+
+As the development work on the project progresses, a suite of SDLC mandated project management documents are iteratively defined and a high level test plan is developed and implemented to ensure code quality and alignment with user expectations and requirements.
+
+Finally, in conclusion, the author offers some insights from his experience of the development process together with consideration of some areas for further investigation and ongoing improvement of the prototype which are outside the scope of the initial project build.
+
 \pagebreak
 \tableofcontents
 \pagebreak------------------------------------------------
 \section{Introduction}
 
+This project examines the requirements for a prototype Rostering and Scheduling solution for which the ultimate client, the Irish Wheelchar Association (IWA) has a real world business requirement. It is envisaged that the finished software deliverable at the conclusion of this project will not be a fully enterprise ready software solution but rather the project deliverable will be employed as a prototype for user acceptance testing by representative end users  and this process will be used to examine and further refine IWA's existing assumptions in relation to the imminent deployment of a ciritical real life deployment whose successful implementation is considered to be fundamental to the competitive position of the IWA. 
+
+The scope of this project is to establish the detailed software functionality requirements and to utilise this information to deliver a prototype software solution for evaluation purposes which will cover the primary use cases and functional requirements identified. This will enable end users to test, assess and give feedback on the prototype and it is envisaged that this process will be constructive in mitigating the risk of significant functionality components being omitted from the final production system or the usability of the ultimate solution not meeting user requirements in full. Through this iterative process, it is planned to document a more comprehensive set of final functional requirements for the production deliverable will fundamentally underpin a competitive tender exercise and vendor engagement through which IWA will select, configure and implement a live rostering and scheduling solution for its 1,500 Personal Assistants across Ireland.
+
+
 \section{Organisational Context}
+\subsection {History of Irish Wheelchair Association}
+The IWA is an independent organisation which was founded in 1960 by a group of people with disabilities and which is governed by its Board of Directors. It is the largest provider of Assisted Living Services in the Ireland, employing 2,500 employees
+ IWA has been at the forefront of developing person centred  service provision in Ireland, based on international best practice. IWA is wholly owned by its 20,000 members who are people with disabilities and volunteers and advocates for independence and quality of life for all people with disabilities in Ireland. In this regard, the mission of the Irish Wheelchair has recently been updated in its new Strategic Plan for 2017-2020 as follows:
+\begin{displayquote}
+Irish Wheelchair Association  has a vision of an Ireland where people with disabilities enjoy equal rights, choices and opportunities in how they live their lives, and where our country is a model worldwide for a truly inclusive society.
+\end{displayquote}
+
+In addition to Assisted Living Service,
+
+
+\subsection {Overview of Assisted Living Service}
+\subsection {Current Position}
+\subsection {Overview of Application Impacts}
 %----------------------------------------------------------------------------------------
 %	Background to work of IWA and context in which app will be used
 %       Reference and link to live tender and explanation of tender approach
@@ -70,6 +100,25 @@ Higher Diploma in Computing
 %----------------------------------------------------------------------------------------
 
 \section {Literature Review}
+\subsection {Software Development Paradigms}
+\subsection {Review of the Systems Development Life Cycle Methodology}
+\subsection {Complementary Methodologies of Development}
+
+\subsubsection {Joint applications development (JAD)}
+\subsubsection {Rapid application development (RAD)}
+\subsubsection {Extreme programming (XP)}
+\subsubsection {Open-source development}
+\subsubsection {End-user development}
+\subsubsection {Object-oriented programming}
+
+\subsection {Agile vs. Waterfall}
+\subsubsection {Evolution of Agile}
+\subsubsection {Evolution of Waterfall}
+\subsubsection {Critical Comparatives}
+\subsection {Unified Modelling Language}
+\subsection {Advantages of Unified Modelling Language}
+\subsection {Advantages of Unified Modelling Language}
+
 
 %----------------------------------------------------------------------------------------
 %	Overview of fields reviewed and sources consulted
