Work on abstract and introduction

--- a/ProjectReport&Documentation/Scheduler Project Report.tex
+++ b/ProjectReport&Documentation/Scheduler Project Report.tex
@@ -80,8 +80,11 @@ The scope of this project is to establish the detailed software functionality re
 
 \section{Organisational Context}
 \subsection {History of Irish Wheelchair Association}
-The IWA is an independent organisation which was founded in 1960 by a group of people with disabilities and which is governed by its Board of Directors. It is the largest provider of Assisted Living Services in the Ireland, employing 2,500 employees
- IWA has been at the forefront of developing person centred  service provision in Ireland, based on international best practice. IWA is wholly owned by its 20,000 members who are people with disabilities and volunteers and advocates for independence and quality of life for all people with disabilities in Ireland. In this regard, the mission of the Irish Wheelchair has recently been updated in its new Strategic Plan for 2017-2020 as follows:
+The IWA is an independent organisation which was founded in 1960 by a group of people with disabilities and which is governed by a Board of Directors elected from its 20,000 membership base. It is the largest provider of Assisted Living Services in the Ireland, employing 2,500 employees and delivering over 2 million hours of service annually. It is substantially funded by the Irish Government, primarily through the Health Service Executive, from whom it receives funding as a Section 39 agency under the Health Act 2004, although it also receives funding from various other statutory and non statutory sources and raises funds directly from the general public. A challenge which is directly pertinent to the planned software project is that IWA's funding streams are primarily remitted in respect of delivery of front line services and it receives no direct funding for Information Technology or other Shared Services activities.
+
+During the recent economic downturn and its impact on government funding, like many non service providers, IWA has had substantial cuts in its funding but it has nevertheless managed to maintain and in some cases grow its level of service activity. These funding challenges have impacted on IWA's Information Technology infrastructure which have suffered from historic underinvestment but IWA's strategic plan for the years 2017 to 2010 now positions Information Technology initiatives as a core enabler of driving efficiency in its service delivery, on the strict understanding that all investment decisions must linked to a clear business case which will deliver an identifiable and measurable return on investment to the organisation.
+
+IWA has been at the forefront of developing person centred  service provision in Ireland, based on international best practice and it is unique among large charities in Ireland in that IWA remains wholly owned by and accountable to its 20,000 members who are people with disabilities and volunteers and other supporters. It advocates for independence and quality of life for all people with disabilities in Ireland. In this regard, the mission of the Irish Wheelchair has recently been updated in its new Strategic Plan for 2017-2020 as follows:
 \begin{displayquote}
 Irish Wheelchair Association  has a vision of an Ireland where people with disabilities enjoy equal rights, choices and opportunities in how they live their lives, and where our country is a model worldwide for a truly inclusive society.
 \end{displayquote}
